--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -1,9 +1,6 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Waka Readme
 
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the master branch
+# Controls when the action will run. 
 on:
   push:
     branches: [ master ]
