--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,3 +19,5 @@ jobs:
           SHOW_COMMIT: "False"
           SHOW_PROJECTS: "False"
           SHOW_TIMEZONE: "False"
+          SHOW_DAYS_OF_WEEK: "False"
+          SHOW_LOC_CHART: "False"
