--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,23 +1,20 @@
 name: Waka Readme
 
-# Controls when the action will run. 
 on:
-  push:
-    branches: [ master ]
   schedule:
-    # Runs at 12am UTC
     - cron: '0 0 * * *'
+  push:
+    branches: 
+      - master
 
 jobs:
   update-readme:
-    name: Update README with Metrics
+    name: Update README with metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_COMMIT: "False"
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_PROJECTS: "False"
-          SHOW_TIMEZONE: "False"
-          SHOW_DAYS_OF_WEEK: "False"
-          SHOW_LOC_CHART: "False"
+          SHOW_LINES_OF_CODE: "True"
