--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,9 +12,10 @@ jobs:
     name: Update README with metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master #PLEASE USE MASTER BRANCH
+      - uses: anmol098/waka-readme-stats@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_COMMIT: "False"
+          SHOW_DAYS_OF_WEEK: "False"
           SHOW_PROJECTS: "False"
-          SHOW_LINES_OF_CODE: "True"
+          SHOW_TIMEZONE: "False"
