--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,21 +1,16 @@
 name: Waka Readme
 
 on:
+  workflow_dispatch:
   schedule:
+    # Runs at 12am UTC
     - cron: '0 0 * * *'
-  push:
-    branches: 
-      - master
 
 jobs:
   update-readme:
-    name: Update README with metrics
+    name: Update this repo's README
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_COMMIT: "False"
-          SHOW_DAYS_OF_WEEK: "False"
-          SHOW_PROJECTS: "False"
-          SHOW_TIMEZONE: "False"
