--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,16 +14,6 @@ jobs:
     name: Update README with Metrics
     runs-on: ubuntu-latest
     steps:
-      - uses: anmol098/waka-readme-stats@master
+      - uses: athul/waka-readme@master
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
-          SHOW_OS: "False"
-          SHOW_PROJECTS: "False"
-          SHOW_PROFILE_VIEWS: "False"
-          SHOW_COMMIT: "False"
-          SHOW_DAYS_OF_WEEK: "False"
-          SHOW_TIMEZONE: "False"
-          SHOW_SHORT_INFO: "False"
-          SHOW_LANGUAGE_PER_REPO: "False"
-          SHOW_EDITORS: "False"
-          SHOW_LOC_CHART: "False"
